--- a/pkg/security/secl/compiler/generators/accessors/field_accessors.tmpl
+++ b/pkg/security/secl/compiler/generators/accessors/field_accessors.tmpl
@@ -39,7 +39,7 @@ var _ = eval.NewContext
     {{$accessorReturnType = $Field.ReturnType}}
 {{ end }}
 
-{{ if or (and $Field.Iterator (not $Field.IsIterator)) ($Field.IsArray) }}
+{{ if or (and $Field.Iterator (not $Field.IsIterator)) (and $Field.IsArray (not $Field.IsIterator)) }}
     {{$accessorReturnType = $accessorReturnType | printf "[]%s" }}
 {{ end }}
 
@@ -98,7 +98,7 @@ func (ev *Event) Get{{$pascalCaseName}}() {{ $accessorReturnType }} {
             values = append(values, result...)
             {{end}}
 
-            ptr = iterator.Next()
+            ptr = iterator.Next(ctx)
         }
 
         return values
