--- a/pkg/security/secl/compiler/generators/accessors/accessors.tmpl
+++ b/pkg/security/secl/compiler/generators/accessors/accessors.tmpl
@@ -274,129 +274,15 @@ func (ev *Event) GetFields() []eval.Field {
 }
 
 func (ev *Event) GetFieldValue(field eval.Field) (interface{}, error) {
-	switch field {
-		{{range $Name, $Field := .Fields}}
-		{{- if $Field.GettersOnly }}
-			{{continue}}
-		{{end}}
-
-		{{if $Field.Ref}}
-		{{$Ref := index $.Fields $Field.Ref}}
-			{{if $Ref}}
-				{{$Field = $Ref}}
-			{{end}}
-		{{end}}
-
-		case "{{$Name}}":
-		{{- if and $Field.Iterator (not $Field.IsLength)}}
-			var values []{{$Field.ReturnType}}
-
-			ctx := eval.NewContext(ev)
-
-			iterator := &{{$Field.Iterator.ReturnType}}{}
-			ptr := iterator.Front(ctx)
-
-			for ptr != nil {
-				{{if $Field.Iterator.IsOrigTypePtr}}
-					element := ptr
-				{{else}}
-					element := *ptr
-				{{end}}
-
-				{{$SubName := $Field.Iterator.Name | TrimPrefix $Field.Name}}
-
-				{{$Return := $SubName | printf "element%s"}}
-				{{if $Field.Handler}}
-					{{$SubName = $Field.Iterator.Name | TrimPrefix $Field.Prefix}}
-					{{$Handler := $Field.Iterator.Name | TrimPrefix $Field.Handler}}
-					{{$Return = print "ev.FieldHandlers." $Handler "(ev, &element" $SubName ")"}}
-				{{end}}
-
-				{{if $Field.IsLength}}
-					{{$Return = ".length" | TrimSuffix $Return}}
-				{{end}}
-
-				{{if and (eq $Field.ReturnType "int") (ne $Field.OrigType "int")}}
-					result := int({{$Return}})
-				{{else}}
-					{{if $Field.IsLength}}
-						result := len({{$Return}})
-					{{else}}
-						result := {{$Return}}
-					{{end}}
-				{{end}}
-
-				{{if not $Field.GetArrayPrefix}}
-				values = append(values, result)
-				{{else}}
-				values = append(values, result...)
-				{{end}}
-
-				ptr = iterator.Next()
-			}
-
-			return values, nil
-		{{else}}
-			{{$Return := $Field.Name | printf "ev.%s"}}
-
-			{{$Checks := $Field | GetChecks $.AllFields}}
-			{{range $Check := $Checks}}
-				{{$Check = $Check | printf "ev.%s"}}
-				if !{{$Check}}() {
-					return {{$Field.GetDefaultReturnValue}}, &eval.ErrNotSupported{Field: field}
-				}
-			{{end}}
-
-			{{if $Field.IsLength}}
-				{{- if $Field.IsIterator}}
-					ctx := eval.NewContext(ev)
-					iterator := &{{$Field.Iterator.ReturnType}}{}
-					{{$Return = "iterator.Len(ctx)"}}
-				{{else}}
-					{{$Return = ".length" | TrimSuffix $Return | printf "len(%s)"}}
-				{{end}}
-			{{end}}
-			{{if $Field.Handler}}
-				{{$Ptr := "&"}}
-				{{$Parent := index $.AllFields $Field.Prefix}}
-				{{- if or (not $Parent) $Parent.IsOrigTypePtr}}
-					{{$Ptr = ""}}
-				{{end}}
-
-				{{$Prefix := $Field.Prefix}}
-				{{ if not $Prefix }}
-					{{$Return = print "ev.FieldHandlers." $Field.Handler "(ev)"}}
-				{{else}}
-					{{$Return = print "ev.FieldHandlers." $Field.Handler "(ev, " $Ptr "ev." $Prefix ")"}}
-				{{end}}
-			{{end}}
-
-			{{if eq $Field.ReturnType "string"}}
-				return {{$Return}}, nil
-			{{else if eq $Field.ReturnType "int"}}
-				{{- if and ($Field.IsArray) (ne $Field.OrigType "int") }}
-					result := make([]int, len({{$Return}}))
-					for i, v := range {{$Return}} {
-						result[i] = int(v)
-					}
-					return result, nil
-				{{- else}}
-					{{- if ne $Field.OrigType "int"}}
-						return int({{$Return}}), nil
-					{{- else}}
-						return {{$Return}}, nil
-					{{end -}}
-				{{end -}}
-			{{else if eq $Field.ReturnType "bool"}}
-				return {{$Return}}, nil
-            {{else if eq $Field.ReturnType "net.IPNet"}}
-                return {{$Return}}, nil
-			{{end}}
-		{{end}}
-		{{end}}
+	m := &Model{}
+	evaluator, err := m.GetEvaluator(field, "")
+	if err != nil {
+		return nil, err
 	}
 
-	return nil, &eval.ErrFieldNotFound{Field: field}
+	ctx := eval.NewContext(ev)
+	value := evaluator.Eval(ctx)
+	return value, nil
 }
 
 func (ev *Event) GetFieldMetadata(field eval.Field) (eval.EventType, reflect.Kind, error) {
