change default include directive for Windows

--- a/omnibus/config/templates/openssl-fips-provider/openssl.cnf.erb
+++ b/omnibus/config/templates/openssl-fips-provider/openssl.cnf.erb
@@ -1,7 +1,7 @@
 config_diagnostics = 1
 openssl_conf = openssl_init
 
-.include <%= install_dir %>/embedded/ssl/fipsmodule.cnf
+.include <%= embedded_ssl_dir %>/fipsmodule.cnf
 
 [openssl_init]
 providers = provider_sect
