--- a/cmd/installer/subcommands/daemon/status.tmpl
+++ b/cmd/installer/subcommands/daemon/status.tmpl
@@ -1,16 +1,16 @@
 Datadog Installer v{{ htmlSafe .Version }}
 {{ range $name, $packageState := .Packages }}
-{{ $package := $packageState.Package }}
+{{ $version := $packageState.Version }}
 {{ boldText $name }}
-  State: {{ if $package.Experiment -}}{{ yellowText "Upgrading" }}{{- else if $package.Stable -}}{{ greenText "OK" }}{{- else -}}config only{{- end }}
+  State: {{ if $version.Experiment -}}{{ yellowText "Upgrading" }}{{- else if $version.Stable -}}{{ greenText "OK" }}{{- else -}}config only{{- end }}
   Installed versions:
-  {{- if $package.Stable }}
-    {{ greenText "●" }} stable: v{{ htmlSafe $package.Stable }}
+  {{- if $version.Stable }}
+    {{ greenText "●" }} stable: v{{ htmlSafe $version.Stable }}
   {{- else }}
     ● stable: none
   {{- end }}
-  {{- if $package.Experiment }}
-    {{ yellowText "●" }} experiment: v{{ htmlSafe $package.Experiment }}
+  {{- if $version.Experiment }}
+    {{ yellowText "●" }} experiment: v{{ htmlSafe $version.Experiment }}
   {{- else }}
     ● experiment: none
   {{- end }}
