[CWS] display if fentry is enabled in the status

--- a/pkg/security/agent/status_templates/runtimesecurity.tmpl
+++ b/pkg/security/agent/status_templates/runtimesecurity.tmpl
@@ -61,6 +61,9 @@
     {{- if .ringBuffer }}
     Use eBPF ring buffer: {{ .ringBuffer }}
     {{- end }}
+    {{- if .fentry }}
+    Use fentry: {{ .fentry }}
+    {{- end }}
     {{ if .constantFetchers }}
     Available constant fetchers
     ===========================
