--- a/comp/core/status/statusimpl/templates/html.tmpl
+++ b/comp/core/status/statusimpl/templates/html.tmpl
@@ -3,6 +3,9 @@
   <span class="stat_data">
     Version: {{.version}}<br>
     Flavor: {{.flavor}}<br>
+    {{- if .fips_status}}
+    FIPS compliant: {{.fips_status}}<br>
+    {{- end }}
     PID: {{.pid}}<br>
     Agent start: {{ formatUnixTime .agent_start_nano }}<br>
     {{- if .config.log_file}}
