--- a/pkg/security/generators/accessors/accessors.tmpl
+++ b/pkg/security/generators/accessors/accessors.tmpl
@@ -134,9 +134,9 @@ func (_ *Model) GetEvaluator(field eval.Field, regID eval.RegisterID) (eval.Eval
 					{{if $Field.Handler }}
 						{{$Event = "ev"}}
 					{{end}}
-					{{$AncestorFunc := "newAncestorsIterator"}}
+					{{$AncestorFunc := "newIterator"}}
 					{{if $Field.GetArrayPrefix}}
-						{{$AncestorFunc = "newAncestorsIteratorArray"}}
+						{{$AncestorFunc = "newIteratorArray"}}
 					{{end}}
 					results := {{$AncestorFunc}}(iterator, "{{$Field.Iterator.Name}}", ctx, {{$Event}}, func(ev *Event, current *{{$Field.Iterator.OrigType}}) {{$Field.GetArrayPrefix}}{{$Field.ReturnType}} {
 						{{range $Check := $Checks}}
