Revert "[ASCII-2691] Change wording on FIPS Mode status indication (#33507)"
This reverts commit 517df3f51a8434847da4810a62b28e40d7771ab5.

--- a/comp/core/status/statusimpl/templates/text.tmpl
+++ b/comp/core/status/statusimpl/templates/text.tmpl
@@ -8,7 +8,7 @@
   Build arch: {{.build_arch}}
   Agent flavor: {{.flavor}}
   {{- if .fips_status}}
-  FIPS Mode: {{.fips_status}}
+  FIPS compliant: {{.fips_status}}
   {{- end }}
   {{- if .config.log_file}}
   Log File: {{.config.log_file}}
