--- a/comp/metadata/haagent/impl/status_templates/inventoryHTML.tmpl
+++ b/comp/metadata/haagent/impl/status_templates/inventoryHTML.tmpl
@@ -1,5 +1,5 @@
 <div class="stat">
-  <span class="stat_title">HA Agent metadata</span>
+  <span class="stat_title">HA Agent Metadata</span>
   <span class="stat_data">
   {{- range $key, $value := .ha_agent_metadata }}
     {{ $key }}: {{ $value }}<br>
