[WIP] Show SECL variables in security-agent status (only global values for now)

--- a/pkg/security/agent/status_templates/runtimesecurity.tmpl
+++ b/pkg/security/agent/status_templates/runtimesecurity.tmpl
@@ -42,6 +42,17 @@
           {{- end }}
     {{ end }}
 
+
+  SECL Variables
+  ==============
+  
+  {{ range $variable := .seclVariables }}
+    - {{ $variable.Name }}: {{ $variable.Value }}
+  {{ end }}
+  {{if not .seclVariables}}
+    No SECL variables found
+  {{end}}
+  
   {{- with .environment }}
 
   Environment
