--- a/pkg/security/generators/accessors/accessors.tmpl
+++ b/pkg/security/generators/accessors/accessors.tmpl
@@ -12,9 +12,11 @@ import (
 	"net"
     "reflect"
 	"math"
+	"strings"
 
 	{{if ne $.SourcePkg $.TargetPkg}}"{{.SourcePkg}}"{{end}}
 	"github.com/DataDog/datadog-agent/pkg/security/secl/compiler/eval"
+	"github.com/DataDog/datadog-agent/pkg/security/secl/containerutils"
 )
 
 // to always require the math package
@@ -297,14 +299,132 @@ func (ev *Event) GetFieldMetadata(field eval.Field) (eval.EventType, reflect.Kin
 	return "", reflect.Invalid, "", &eval.ErrFieldNotFound{Field: field}
 }
 
+func (ev *Event) setStringArray(field string, fv *[]string, value interface{}) error {
+	switch rv := value.(type) {
+	case string:
+		*fv = append(*fv, rv)
+	case []string:
+		*fv = append(*fv, rv...)
+	default:
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	return nil
+}
+
+func (ev *Event) setIntArray(field string, fv *[]int, value interface{}) error {
+	switch rv := value.(type) {
+	case int:
+		*fv = append(*fv, rv)
+	case []int:
+		*fv = append(*fv, rv...)
+	default:
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	return nil
+}
+
+func (ev *Event) setBoolArray(field string, fv *[]bool, value interface{}) error {
+	switch rv := value.(type) {
+	case bool:
+		*fv = append(*fv, rv)
+	case []bool:
+		*fv = append(*fv, rv...)
+	default:
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	return nil
+}
+
+func (ev *Event) setString(field string, fv *string, value interface{}) error {
+	rv, ok := value.(string)
+	if !ok {
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	*fv = rv
+	return nil
+}
+
+func (ev *Event) setBool(field string, fv *bool, value interface{}) error {
+	rv, ok := value.(bool)
+	if !ok {
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	*fv = rv
+	return nil
+}
+
+func (ev *Event) setUint16(field string, fv *uint16, value interface{}) error {
+	rv, ok := value.(int)
+	if !ok {
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	if rv < 0 || rv > math.MaxUint16 {
+			return &eval.ErrValueOutOfRange{Field: field}
+	}
+	*fv = uint16(rv)
+	return nil
+}
+
+func (ev *Event) setUint32(field string, fv *uint32, value interface{}) error {
+	rv, ok := value.(int)
+	if !ok {
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	*fv = uint32(rv)
+	return nil
+}
+
+func (ev *Event) setUint64(field string, fv *uint64, value interface{}) error {
+	rv, ok := value.(int)
+	if !ok {
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	*fv = uint64(rv)
+	return nil
+}
+
+func (ev *Event) setInt64(field string, fv *int64, value interface{}) error {
+	rv, ok := value.(int)
+	if !ok {
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	*fv = int64(rv)
+	return nil
+}
+
+func (ev *Event) setInt(field string, fv *int, value interface{}) error {
+	rv, ok := value.(int)
+	if !ok {
+		return &eval.ErrValueTypeMismatch{Field: field}
+	}
+	*fv = rv
+	return nil
+}
+
+func (ev *Event) initProcess() {
+	if ev.BaseEvent.ProcessContext == nil {
+		ev.BaseEvent.ProcessContext = &ProcessContext{}
+	}
+	if ev.BaseEvent.ProcessContext.Ancestor == nil {
+		ev.BaseEvent.ProcessContext.Ancestor = &ProcessCacheEntry{}
+	}
+	if ev.BaseEvent.ProcessContext.Parent == nil {
+		ev.BaseEvent.ProcessContext.Parent = &ev.BaseEvent.ProcessContext.Ancestor.ProcessContext.Process
+	}
+
+	if ev.Exec.Process == nil {
+		ev.Exec.Process = &Process{}
+	}
+}
+
 func (ev *Event) SetFieldValue(field eval.Field, value interface{}) error {
+	if strings.HasPrefix(field, "process.") || strings.HasPrefix(field, "exec.") {
+		ev.initProcess()
+	}
+
 	switch field {
 		{{range $Name, $Field := .Fields}}
 		{{- if $Field.GettersOnly }}
-			{{continue}}
-		{{end}}
-
-		{{if not ($Name | GenSetFieldValue $.FvSetters) }}
 			{{continue}}
 		{{end}}
 
@@ -319,7 +439,7 @@ func (ev *Event) SetFieldValue(field eval.Field, value interface{}) error {
 		{{$SetHandler := $Field | GetSetHandler $.AllFields}}
 
 		case "{{$Name}}":
-			{{- $Field | NewField $.AllFields}}
+			{{- $Field | NewField $.AllFields $Name}}
 			{{if $Field | IsReadOnly}}
 				return &eval.ErrFieldReadOnly{Field: "{{$Name}}"}
 			{{else}}
@@ -331,26 +451,19 @@ func (ev *Event) SetFieldValue(field eval.Field, value interface{}) error {
 			{{end}}
 			{{- if eq $Field.BasicType "string"}}
 				{{- if $Field.IsArray}}
-					switch rv := value.(type) {
-						case string:
-							{{$FieldName}} = append({{$FieldName}}, rv)
-						case []string:
-							{{$FieldName}} = append({{$FieldName}}, rv...)
-						default:
-							return &eval.ErrValueTypeMismatch{Field: "{{$Name}}"}
-					}
+					return ev.setStringArray("{{$Name}}", &{{$FieldName}}, value)
 				{{else}}
+					{{- if ne $Field.OrigType "string" }}
 					rv, ok := value.(string)
 					if !ok {
 						return &eval.ErrValueTypeMismatch{Field: "{{$Name}}"}
 					}
-					{{- if ne $Field.OrigType "string" }}
 					{{$FieldName}} = {{$Field.OrigType}}(rv)
+					return nil
 					{{else}}
-					{{$FieldName}} = rv
+					return ev.setString("{{$Name}}", &{{$FieldName}}, value)
 					{{end}}
 				{{end}}
-				return nil
 			{{else if eq $Field.BasicType "int"}}
 				{{- if $Field.IsArray}}
 					switch rv := value.(type) {
@@ -363,37 +476,16 @@ func (ev *Event) SetFieldValue(field eval.Field, value interface{}) error {
 						default:
 							return &eval.ErrValueTypeMismatch{Field: "{{$Name}}"}
 					}
+					return nil
 				{{else}}
-					rv, ok := value.(int)
-					if !ok {
-						return &eval.ErrValueTypeMismatch{Field: "{{$Name}}"}
-					}
-					{{- if eq $Field.OrigType "uint16" }}
-					if rv < 0 || rv > math.MaxUint16 {
-						return &eval.ErrValueOutOfRange{Field: "{{$Name}}"}
-					}
-					{{- end }}
-					{{$FieldName}} = {{$Field.OrigType}}(rv)
+					return ev.set{{$Field.OrigType | UpperCase}}("{{$Name}}", &{{$FieldName}}, value)
 				{{end}}
-				return nil
 			{{else if eq $Field.BasicType "bool"}}
 				{{- if $Field.IsArray}}
-					switch rv := value.(type) {
-						case bool:
-							{{$FieldName}} = append({{$FieldName}}, rv)
-						case []bool:
-							{{$FieldName}} = append({{$FieldName}}, rv...)
-						default:
-							return &eval.ErrValueTypeMismatch{Field: "{{$Name}}"}
-					}
+					return ev.setBoolArray("{{$Name}}", &{{$FieldName}}, value)
 				{{else}}
-					rv, ok := value.(bool)
-					if !ok {
-						return &eval.ErrValueTypeMismatch{Field: "{{$Name}}"}
-					}
-					{{$FieldName}} = rv
+					return ev.setBool("{{$Name}}", &{{$FieldName}}, value)
 				{{end}}
-				return nil
 			{{else if eq $Field.BasicType "net.IPNet"}}
 				{{- if $Field.IsArray}}
 					switch rv := value.(type) {
