--- a/pkg/security/generators/accessors/accessors.tmpl
+++ b/pkg/security/generators/accessors/accessors.tmpl
@@ -299,108 +299,6 @@ func (ev *Event) GetFieldMetadata(field eval.Field) (eval.EventType, reflect.Kin
 	return "", reflect.Invalid, "", &eval.ErrFieldNotFound{Field: field}
 }
 
-func (ev *Event) setStringArray(field string, fv *[]string, value interface{}) error {
-	switch rv := value.(type) {
-	case string:
-		*fv = append(*fv, rv)
-	case []string:
-		*fv = append(*fv, rv...)
-	default:
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	return nil
-}
-
-func (ev *Event) setIntArray(field string, fv *[]int, value interface{}) error {
-	switch rv := value.(type) {
-	case int:
-		*fv = append(*fv, rv)
-	case []int:
-		*fv = append(*fv, rv...)
-	default:
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	return nil
-}
-
-func (ev *Event) setBoolArray(field string, fv *[]bool, value interface{}) error {
-	switch rv := value.(type) {
-	case bool:
-		*fv = append(*fv, rv)
-	case []bool:
-		*fv = append(*fv, rv...)
-	default:
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	return nil
-}
-
-func (ev *Event) setString(field string, fv *string, value interface{}) error {
-	rv, ok := value.(string)
-	if !ok {
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	*fv = rv
-	return nil
-}
-
-func (ev *Event) setBool(field string, fv *bool, value interface{}) error {
-	rv, ok := value.(bool)
-	if !ok {
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	*fv = rv
-	return nil
-}
-
-func (ev *Event) setUint16(field string, fv *uint16, value interface{}) error {
-	rv, ok := value.(int)
-	if !ok {
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	if rv < 0 || rv > math.MaxUint16 {
-			return &eval.ErrValueOutOfRange{Field: field}
-	}
-	*fv = uint16(rv)
-	return nil
-}
-
-func (ev *Event) setUint32(field string, fv *uint32, value interface{}) error {
-	rv, ok := value.(int)
-	if !ok {
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	*fv = uint32(rv)
-	return nil
-}
-
-func (ev *Event) setUint64(field string, fv *uint64, value interface{}) error {
-	rv, ok := value.(int)
-	if !ok {
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	*fv = uint64(rv)
-	return nil
-}
-
-func (ev *Event) setInt64(field string, fv *int64, value interface{}) error {
-	rv, ok := value.(int)
-	if !ok {
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	*fv = int64(rv)
-	return nil
-}
-
-func (ev *Event) setInt(field string, fv *int, value interface{}) error {
-	rv, ok := value.(int)
-	if !ok {
-		return &eval.ErrValueTypeMismatch{Field: field}
-	}
-	*fv = rv
-	return nil
-}
-
 func (ev *Event) initProcess() {
 	if ev.BaseEvent.ProcessContext == nil {
 		ev.BaseEvent.ProcessContext = &ProcessContext{}
@@ -451,7 +349,7 @@ func (ev *Event) SetFieldValue(field eval.Field, value interface{}) error {
 			{{end}}
 			{{- if eq $Field.BasicType "string"}}
 				{{- if $Field.IsArray}}
-					return ev.setStringArray("{{$Name}}", &{{$FieldName}}, value)
+					return ev.setStringArrayFieldValue("{{$Name}}", &{{$FieldName}}, value)
 				{{else}}
 					{{- if ne $Field.OrigType "string" }}
 					rv, ok := value.(string)
@@ -461,7 +359,7 @@ func (ev *Event) SetFieldValue(field eval.Field, value interface{}) error {
 					{{$FieldName}} = {{$Field.OrigType}}(rv)
 					return nil
 					{{else}}
-					return ev.setString("{{$Name}}", &{{$FieldName}}, value)
+					return ev.setStringFieldValue("{{$Name}}", &{{$FieldName}}, value)
 					{{end}}
 				{{end}}
 			{{else if eq $Field.BasicType "int"}}
@@ -478,13 +376,13 @@ func (ev *Event) SetFieldValue(field eval.Field, value interface{}) error {
 					}
 					return nil
 				{{else}}
-					return ev.set{{$Field.OrigType | UpperCase}}("{{$Name}}", &{{$FieldName}}, value)
+					return ev.set{{$Field.OrigType | UpperCase}}FieldValue("{{$Name}}", &{{$FieldName}}, value)
 				{{end}}
 			{{else if eq $Field.BasicType "bool"}}
 				{{- if $Field.IsArray}}
-					return ev.setBoolArray("{{$Name}}", &{{$FieldName}}, value)
+					return ev.setBoolArrayFieldValue("{{$Name}}", &{{$FieldName}}, value)
 				{{else}}
-					return ev.setBool("{{$Name}}", &{{$FieldName}}, value)
+					return ev.setBoolFieldValue("{{$Name}}", &{{$FieldName}}, value)
 				{{end}}
 			{{else if eq $Field.BasicType "net.IPNet"}}
 				{{- if $Field.IsArray}}
