--- a/pkg/fleet/installer/packages/embedded/templates/datadog-agent-ddot.service.tmpl
+++ b/pkg/fleet/installer/packages/embedded/templates/datadog-agent-ddot.service.tmpl
@@ -1,4 +1,4 @@
-f[Unit]
+[Unit]
 {{- if .Stable}}
 Description=Datadog Distribution of OpenTelemetry Collector
 After=datadog-agent.service datadog-agent-exp.service
