--- a/omnibus/config/templates/init-scripts-agent/sysvinit_debian.ddot.erb
+++ b/omnibus/config/templates/init-scripts-agent/sysvinit_debian.ddot.erb
@@ -16,7 +16,7 @@ ETC_DIR="<%= etc_dir %>"
 INSTALL_DIR="<%= install_dir %>"
 AGENTPATH="$INSTALL_DIR/embedded/bin/otel-agent"
 PIDFILE="$INSTALL_DIR/run/otel-agent.pid"
-AGENT_ARGS="--config=/etc/otel-agent/otel-config.yaml --core-config=$ETC_DIR/datadog.yaml --pidfile=$PIDFILE"
+AGENT_ARGS="--config=$ETC_DIR/otel-config.yaml --core-config=$ETC_DIR/datadog.yaml --pidfile=$PIDFILE"
 AGENT_USER="dd-agent"
 NAME="datadog-agent-ddot"
 DESC="Datadog Distribution of OpenTelemetry Collector"
